# wsc

./: .gitignore  CMakeLists.txt  README.md
arduino/: sketch.ino
win/: CMakeLists.txt
win/include/: com.hpp  compat.hpp  gui.hpp  serialization.hpp  worker.hpp
win/src/: com.cpp  gui.cpp  main.cpp  serialization.cpp  worker.cpp
